--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "eslint": "^7.22.0",
         "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-prettier": "^3.3.1",
+        "gh-pages": "^3.1.0",
         "node-sass": "^5.0.0",
         "prettier": "^2.2.1"
     }
